--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="author" content="">
 
     <title>Almuk</title>
-
+	<link rel="icon" type="image/png"  href="img/favicon.ico">
+	
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
