--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
         <h1 class="text-uppercase mb-0">Almuk</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">Web Developer - Application Programmer - User Experience Designer</h2>
+        <h2 class="font-weight-light mb-0">Web Developer - Application Programmer, Web Developer - User Experience Designer</h2>
       </div>
     </header>
 
@@ -141,7 +141,7 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Almuk Aliyu is a Java, vb6 application programmer and website developer. A student of computer science education  Ahmadu Bello University Samaru Zaria.</p>
+            <p class="lead">Almuk Aliyu is a Java, vb6 application programmer and website developer. A Graduate of Federal Collage of Eduaction ZAria and a student of computer science education  Ahmadu Bello University Samaru Zaria.</p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to create projects, this place is perfect for you</p>
