--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <!-- Custom styles for this template -->
     <link href="css/freelancer.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
+	  
+	  https://affiliates.jumia.com/banners/Jumia Nigeria/JumiaAnniversary/JA 1024x174_1.jpg
 
   </head>
 
